# VideoStream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  config.toml
.github/workflows/: .github.yml
modules/http_streamer/: CMakeLists.txt
modules/http_streamer/include/: FFmpeg.h  FFmpegInput.h  HttpStreamServer.h  InputConfig.h  InputVideoStream.h  StreamChannel.h  StreamController.h
modules/http_streamer/src/: AVMemory.cpp  AVMemory.h  Decoder.h  DecoderImpl.cpp  DecoderImpl.h  Encoder.h  EncoderImpl.cpp  EncoderImpl.h  FFmpeg.h  FFmpegInput.cpp  FFmpegInput.h  Format.h  FrameEncoder.cpp  FrameEncoder.h  GroupStreamSession.cpp  GroupStreamSession.h  HWDecoder.cpp  HWDecoder.h  HWEncoder.cpp  HWEncoder.h  HWUtils.cpp  HWUtils.h  HttpStreamServer.cpp  HttpStreamServer.h  HttpStreamSession.cpp  HttpStreamSession.h  InputConfig.cpp  InputConfig.h  InputFormat.cpp  InputFormat.h  InputStream.h  InputVideoStream.cpp  InputVideoStream.h  StreamChannel.cpp  StreamChannel.h  StreamController.cpp  StreamController.h  StreamServer.h  StreamSession.h  Worker.h
src/: Input.cpp  Input.h  main.cpp
